{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 4237,
  "lineage": "64154ba5-ac8f-cdc4-afc7-caa8f5ca7370",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-Nat-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f797a97e873310bc",
            "domain": "vpc",
            "id": "eipalloc-0f797a97e873310bc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-232-150-137.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.150.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0770726357cfe8240",
            "arn": "arn:aws:ec2:ap-south-1:969415682385:instance/i-0ad39b1b16d731617",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad39b1b16d731617",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Tkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0729e15abac31cd9a",
            "private_dns": "ip-10-0-1-148.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-3-110-31-2.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.31.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0968cc7968187f4a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7680d7eae279107",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c219afe58bcdc35"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main",
            "data.aws_ami.Latest_Image"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:internet-gateway/igw-012554d3574940a31",
            "id": "igw-012554d3574940a31",
            "owner_id": "969415682385",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f797a97e873310bc",
            "association_id": "eipassoc-0c36e8789aa82c4a7",
            "connectivity_type": "public",
            "id": "nat-0b3da4edadfadeca0",
            "network_interface_id": "eni-062cfc4359f0f5b4d",
            "private_ip": "10.0.1.110",
            "public_ip": "13.232.150.137",
            "subnet_id": "subnet-0d7680d7eae279107"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:route-table/rtb-033d0b8392735f08f",
            "id": "rtb-033d0b8392735f08f",
            "owner_id": "969415682385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3da4edadfadeca0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:route-table/rtb-05d34e9a6491f95db",
            "id": "rtb-05d34e9a6491f95db",
            "owner_id": "969415682385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012554d3574940a31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "tags_all": {
              "Name": "Public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "App2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e95fb8108a3ab24",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-061bf2a703779711c"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.App2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "App_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039b508ff93cfe898",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-0fbb8f2a9116930e5"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.App_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DB2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab867bc3ee8d9e8b",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-0f095444bb0f420e1"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.DB2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DB_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad058d3e49549ab",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-003f45e56f4169df4"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.DB_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "FE2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab7eb309258ec0e",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-0f620f1a71d48293b"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.FE2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "FE_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077a1704d0dc4f73d",
            "route_table_id": "rtb-033d0b8392735f08f",
            "subnet_id": "subnet-0b739c2df92511f43"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.FE_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RT-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063319e89ba3a462b",
            "route_table_id": "rtb-05d34e9a6491f95db",
            "subnet_id": "subnet-0d7680d7eae279107"
          },
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_route_table.Public-RT",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:security-group/sg-0701773d8b58cc9f2",
            "description": "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0701773d8b58cc9f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c219afe58bcdc35"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "969415682385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Frontend-SG"
            },
            "tags_all": {
              "Name": "Frontend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:security-group/sg-04c219afe58bcdc35",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c219afe58bcdc35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Bastion Security Group",
            "name_prefix": "",
            "owner_id": "969415682385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Security Group"
            },
            "tags_all": {
              "Name": "Bastion Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-061bf2a703779711c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061bf2a703779711c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App2_ap_south_1b"
            },
            "tags_all": {
              "Name": "App2_ap_south_1b"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0fbb8f2a9116930e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb8f2a9116930e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_ap_south_1a"
            },
            "tags_all": {
              "Name": "private_ap_south_1a"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0f095444bb0f420e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f095444bb0f420e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB2_private_ap_south_1b"
            },
            "tags_all": {
              "Name": "DB2_private_ap_south_1b"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-003f45e56f4169df4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003f45e56f4169df4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB_private_ap_south_1a"
            },
            "tags_all": {
              "Name": "DB_private_ap_south_1a"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "FE2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0f620f1a71d48293b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f620f1a71d48293b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FE2_private_ap_south_1b"
            },
            "tags_all": {
              "Name": "FE2_private_ap_south_1b"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "FE_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0b739c2df92511f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b739c2df92511f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FE_private_ap_south_1a"
            },
            "tags_all": {
              "Name": "FE_private_ap_south_1a"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0d7680d7eae279107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7680d7eae279107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-010a1a1303027f4cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:vpc/vpc-010a1a1303027f4cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5a61e1b73c00bf1",
            "default_route_table_id": "rtb-0faf87a2cb80eda1b",
            "default_security_group_id": "sg-0a31d8c321e552a33",
            "dhcp_options_id": "dopt-028209f03daa103ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010a1a1303027f4cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faf87a2cb80eda1b",
            "owner_id": "969415682385",
            "tags": {
              "Name": "Test_VPC"
            },
            "tags_all": {
              "Name": "Test_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}